# example-python-client

./: CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yaml
src/: config.py  device_auth.py  main.py  project.json  solver-director-example.py
src/auth/: __init__.py  core.py  device_auth.py  token.py
src/solver_director/: __init__.py
