[project]
name = "example-client"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.5,<3.0",
    "joserfc>=1.6.3,<2.0",
]

[dependency-groups]
dev = [
    "pytest>=9,<10",
    "pytest-cov>=7,<8",
    "ruff>=0.15.11,<0.16.0",
    "bandit>=1.7,<2.0",
    "pip-audit>=2.7,<3.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "integration: mark integration tests",
]
